--- a/API mini-exrecises/github-api/index.html
+++ b/API mini-exrecises/github-api/index.html
@@ -5,16 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    #get{
-      height: 10vh;
-      width: 30vw;
-    }
-  </style>
 </head>
 <body>
-  <button id="get">get</button>
-  <div class="container"></div>
+  <div class="container">
+    <input type="text" class="input">
+    <button class="getUser">Get</button>
+  </div>
+  
   <script src="./app.js"></script>
 </body>
 </html>
